Added Boilerplate Code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>ChuckleWacker</title>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  </head>
+
+  <body>
+    Hellow World!
+  </body>
+
+</html>
